syntax = "proto3";

option csharp_namespace = "Meetup.GroupManagement.Contracts";
package meetup.groupmanagement;

import "google/protobuf/timestamp.proto";

service MeetupGroupManagement{
  rpc Create(CreateRequest) returns (CommandReply);
  rpc UpdateDetails(UpdateDetailsRequest) returns (CommandReply);
  rpc Join(JoinRequest) returns (CommandReply);
  rpc Leave(LeaveRequest) returns (CommandReply);
  rpc GetById(GetGroup) returns (GetGroup.GetGroupReply);
  rpc Get(GetGroup) returns (GetGroup.GetGroupReply);
}

message CreateRequest{
  string id = 1;
  string slug = 2;
  string organizer_id = 3;
  string title = 4;
  string description = 5;
  string location = 6;
}
message UpdateDetailsRequest{
  string id = 1;
  string title = 2;
  string description = 3;
  string location = 4;
}

message JoinRequest{
  string group_id = 1;
  string user_id = 2;
}

message LeaveRequest{
  string group_id = 1;
  string user_id = 2;
  string reason = 3;
}

message CommandReply{
  string group_id = 1;
}

message GetGroup{
  oneof id {
    string group_slug = 1;
    string group_id = 2;
  }
  message GetGroupReply {
    Group group = 1;
  }
  message Group{
    string id = 1;
    string slug = 2;
    string title = 3;
    string description = 4;
    string organizer_id = 5;
    repeated Member members = 6;
  }
  message Member{
    string user_id = 1;
    google.protobuf.Timestamp joined_at = 2;
  }
}
